--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/miguel76/SparqlBlocks-Server/issues"
   },
-  "homepage": "https://github.com/miguel76/SparqlBlocks-Server#readme"
+  "homepage": "https://github.com/miguel76/SparqlBlocks-Server#readme",
+  "dependencies": {
+    "express": "^4.14.0",
+    "sparqlblocks": "github:miguel76/SparqlBlocks"
+  }
 }
