--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/miguel76/SparqlBlocks-Server#readme",
   "dependencies": {
+    "bunyan": "^1.8.1",
     "express": "^4.14.0",
     "socket.io": "^1.4.8",
     "sparqlblocks": "github:miguel76/SparqlBlocks"
