--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "socket.io": "^1.4.8",
     "sparqlblocks": "github:miguel76/SparqlBlocks",
     "winston": "^2.2.0",
+    "winston-aws-cloudwatch": "^1.4.0",
     "winston-loggly-bulk": "^1.3.3"
   }
 }
