--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/miguel76/SparqlBlocks-Server#readme",
   "dependencies": {
+    "ejs": "^2.5.7",
     "express": "^4.14.0",
     "loggly": "^1.1.0",
     "socket.io": "^1.4.8",
